# pidgin-logviewer

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  logplugin.c  uncrustify.cfg
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  logplugin.c
